# tetris-solver

./: pyproject.toml
manim/media/videos/main/1080p30/partial_movie_files/DefaultTemplate/: partial_movie_file_list.txt
solver/: main.py  problem.txt  test.py
solver/core/: board.py  graph.py  node.py  row.py  tetronimo.py  utils.py
